--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "ngx-color-picker": "^5.3.5",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
